[package]
name = "ethereum_transaction"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0"
bip39 = "2.0.0"
secp256k1 = "0.29.0"
sha3 = "0.10.5"
hex = "0.4.2" # 用于将字节转换为十六进制字符串]
tokio = { version = "1", features = ["full"] }
ethers = { version = "2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
